--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -21,7 +21,7 @@
     <section class="filters">
       <button class="search_button">Search</button>
     </section>
-  </div>
+  </div>a
 
   <footer>
   <div class="footer_text"> Best School </div>
